# ML-AI-Automation

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.py
notebooks/: eda.ipynb
utils/: cleanlab_utils.py  eda_utils.py  logger_utils.py  numpy_utils.py  pandas_utils.py  sklearn_utils.py  tensor_utils.py
